<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:elevation="4dp"
        app:titleTextColor="#ffffff"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        android:layoutDirection="rtl"
        />

    <android.support.v7.widget.CardView
        android:id="@+id/card"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_gravity="center"
        android:elevation="2dp"
        >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:id="@+id/solution"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/pic_description" />
    </android.support.v7.widget.CardView>

    <RelativeLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent"
        android:layout_marginTop="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginBottom="0dp"
       >

       <android.support.v7.widget.CardView
           android:id="@+id/bottom_bar"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_alignParentBottom="true"
           app:cardCornerRadius="0dp"
           app:cardBackgroundColor="@color/colorPrimary"
           android:elevation="4dp"
           android:layoutDirection="ltr"
           >

           <LinearLayout

               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:orientation="vertical"
               >
               <LinearLayout
                   android:layout_width="match_parent"
                   android:layout_height="?attr/actionBarSize"
                   android:weightSum="4">
                   <Button
                       android:textColor="#ffffff"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:text="@string/plus_1"
                       android:layout_weight="1"
                       style="?attr/borderlessButtonStyle"
                       android:id="@+id/plus_1"
                       android:textSize="18sp"/>
                   <Button
                       android:textColor="#ffffff"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:text="@string/plus_10"
                       android:layout_weight="1"
                       style="?attr/borderlessButtonStyle"
                       android:id="@+id/plus_10"
                       android:textSize="18sp"/>
                   <Button
                       android:textColor="#ffffff"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:text="@string/plus_100"
                       android:layout_weight="1"
                       style="?attr/borderlessButtonStyle"
                       android:id="@+id/plus_100"
                       android:textSize="18sp" />
                   <Button
                       android:textColor="#ffffff"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:text="@string/plus_1000"
                       android:layout_weight="1"
                       style="?attr/borderlessButtonStyle"
                       android:id="@+id/plus_1000"
                       android:textSize="18sp"/>
               </LinearLayout>
               <View
                   android:layout_width="match_parent"
                   android:layout_height="1dp"
                   android:background="#000000"
                   android:alpha="0.12"/>
               <LinearLayout
                   android:layout_width="match_parent"
                   android:layout_height="?attr/actionBarSize"
                   android:weightSum="4">
                   <Button
                       android:textColor="#ffffff"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:text="@string/minus_1"
                       android:layout_weight="1"
                       style="?attr/borderlessButtonStyle"
                       android:id="@+id/minus_1"
                       android:textSize="18sp"/>
                   <Button
                       android:textColor="#ffffff"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:text="@string/minus_10"
                       android:layout_weight="1"
                       style="?attr/borderlessButtonStyle"
                       android:id="@+id/minus_10"
                       android:textSize="18sp"/>
                   <Button
                       android:textColor="#ffffff"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:text="@string/minus_100"
                       android:layout_weight="1"
                       style="?attr/borderlessButtonStyle"
                       android:id="@+id/minus_100"
                       android:textSize="18sp"/>
                   <Button
                       android:textColor="#ffffff"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:text="@string/minus_1000"
                       android:layout_weight="1"
                       style="?attr/borderlessButtonStyle"
                       android:id="@+id/minus_1000"
                       android:textSize="18sp"/>
               </LinearLayout>

           </LinearLayout>
       </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/bottom_bar"
            android:layout_marginRight="12dp"
            android:layout_marginBottom="11dp"
            android:layout_marginLeft="12dp">
            <android.support.v7.widget.SwitchCompat
                android:text="@string/keep_screen_on"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@+id/bottom_bar"
                android:layout_marginRight="12dp"
                android:layout_marginLeft="12dp"
                android:layout_marginBottom="11dp"
                android:layout_marginTop="11dp"
                android:textDirection="rtl"
                android:layoutDirection="rtl"
                android:id="@+id/keep_on_switch" />

        </android.support.v7.widget.CardView>

    </RelativeLayout>
</LinearLayout>