<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <android.support.v7.widget.Toolbar
        android:id="@+id/about_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:elevation="4dp"
        app:titleTextColor="#ffffff"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        android:layoutDirection="rtl"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin">

        <TextView
            android:text="@string/app_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:id="@+id/textView2"
            android:textDirection="rtl"
            android:layoutDirection="rtl"/>

        <TextView
            android:text="@string/app_license"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView2"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:id="@+id/textView3"
            android:textDirection="rtl"
            android:layoutDirection="rtl"/>

        <TextView
            android:text="@string/app_source"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView3"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:id="@+id/textView4"
            android:textDirection="rtl"
            android:layoutDirection="rtl"/>

        <TextView
            android:text="@string/app_developer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView4"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:id="@+id/textView5"
            android:textDirection="rtl"
            android:layoutDirection="rtl"/>

        <Button
            android:text="ایمیل توسعه‌دهنده"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/developer_email"
            android:layout_below="@+id/textView5"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            style="@style/AppTheme2"
            android:textColor="#000000"
            android:onClick="developerEMAIL"
            android:layoutDirection="rtl"/>

        <Button
            android:text="لینک سورس‌کد"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/source_site"
            android:layout_below="@+id/developer_email"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            style="@style/AppTheme2"
            android:textColor="#000000"
            android:onClick="sourceWebsite"
            android:layoutDirection="rtl"/>
        <ir.adad.client.Banner
            android:id="@+id/banner_ad_view1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_margin="5dp"/>
    </RelativeLayout>


</LinearLayout>
